--- a/frontend(fire-free)/src/app/menus/notification/notification.page.scss
+++ b/frontend(fire-free)/src/app/menus/notification/notification.page.scss
@@ -1,11 +1,13 @@
+// horizontal-line color variables
+$hr-line-color: whitesmoke;
 
 .img-button-red {
     width: 56px;
     height: 56px;
     --border-radius: 50%;
     --border-width: 100%;
-    --border-color: #ffffff;
-    --box-shadow: 2px 2px 8px 2px #d7d8da;
+    // --border-color: #ffffff;
+    // --box-shadow: 2px 2px 8px 2px #d7d8da;
 }
 
 .img-button-red:hover {
@@ -22,8 +24,8 @@
     height: 56px;
     --border-radius: 50%;
     --border-width: 100%;
-    --border-color: #ffffff;
-    --box-shadow: 2px 2px 8px 2px #d7d8da;
+    // --border-color: #ffffff;
+    // --box-shadow: 2px 2px 8px 2px #d7d8da;
 }
 
 .img-button-green:hover {
@@ -33,4 +35,36 @@
     --border-width: 100%;
     --border-color: #ffffff;
     --box-shadow: 2px 2px 8px 2px #d7d8da;
+}
+
+hr {
+    border-top: 1px solid $hr-line-color;
+    width: 95%;
+}
+
+@keyframes warningForward {
+
+    from {
+        // padding-left: 0px;
+        width: 1.5px;
+        opacity: 0;
+    }
+    to {
+        // padding-left: 80px;
+        width: 80px;
+        opacity: 100%;
+    }
+}
+@keyframes warningBackward {
+
+    from {
+        // padding-left: 80px;
+        width: 80px;
+        opacity: 100;
+    }
+    to {
+        // padding-left: 0px;
+        width: 1.5px;
+        opacity: 0;
+    }
 }
