--- a/frontend/src/app/menus/profile/edit/edit.page.scss
+++ b/frontend/src/app/menus/profile/edit/edit.page.scss
@@ -1,41 +1,35 @@
-// background color variables
-$card-background-color: #1B5259;
+$card-background-color: #1b5259;
+$text-color-1: #6febe1;
+$hr-line-color: #b0b3b5;
 
-// text color variables
-$text-color-1: #6FEBE1;
-
-// horizontal-line color variables
-$hr-line-color: #B0B3B5;
-
-// mixins
 @mixin headerBtnPosition($float) {
-    position: absolute;
-    float: $float;
+  position: absolute;
+  float: $float;
 }
 
 ion-content {
-    --ion-background-color: whitesmoke;
+  --ion-background-color: whitesmoke;
 
-    #head {
-        position: relative;
-        color: $text-color-1;
-        #backBtn {
-            @include headerBtnPosition(left);
-        }
-        #editBtn {
-            @include headerBtnPosition(right);
-            margin-top: 2vh;
-            margin-left: 80vw;
-        }
+  #head {
+    position: relative;
+    color: $text-color-1;
+    #backBtn {
+      @include headerBtnPosition(left);
     }
+    #editBtn {
+      @include headerBtnPosition(right);
+      margin-top: 2vh;
+      margin-left: 80vw;
+    }
+  }
 
-    #profile {
-        width: 100%;
-        filter: brightness(70%);
-    }
+  #profile {
+    width: 100%;
+    filter: brightness(70%);
+  }
 
-    hr {
-        border-top: 1px solid $hr-line-color;
-        width: 95%;
-    }
+  hr {
+    border-top: 1px solid $hr-line-color;
+    width: 95%;
+  }
 }
